--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
     </dependency>
   </dependencies>
   <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+      </plugin>
+    </plugins>
     <finalName>App</finalName>
   </build>
 </project>
