--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  
+  <project>
+  ...
+  <distributionManagement>
+    <snapshotRepository>
+      <id>nexus-snapshots</id>
+      <url>http://13.233.108.167:8081/repository/maven-snapshots/</url>
+    </snapshotRepository>
+  </distributionManagement>
+</project>
+  
   <modelVersion>4.0.0</modelVersion>
   <groupId>lu.amazon.aws.demo</groupId>
   <artifactId>WebApp</artifactId>
